WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314892
[WPE] Crash in WebCore::PlatformDisplay::skiaGrContext() with the old API when WEBKIT_USE_SKIA_FOR_COMPOSITION=1
https://bugs.webkit.org/show_bug.cgi?id=314892
Summary
[WPE] Crash in WebCore::PlatformDisplay::skiaGrContext() with the old API whe...
Claudio Saavedra
Reported
2026-05-15 07:38:25 PDT
Thread 1 (Thread 0x7f18a8ff96c0 (LWP 990954)): #0 0x00007f1b433cdb2c in pthread_kill () at /lib/x86_64-linux-gnu/libc.so.6 #1 0x00007f1b4337427e in raise () at /lib/x86_64-linux-gnu/libc.so.6 #2 0x00007f1b433578ff in abort () at /lib/x86_64-linux-gnu/libc.so.6 #3 0x00007f1b447ff717 in WTFCrashWithInfo(int, char const*, char const*) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #4 0x00007f1b48dc734e in WebCore::PlatformDisplay::skiaGrContext() const () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #5 0x00007f1b48dcac53 in WebCore::SkiaBackingStore::Tile::update(WebCore::IntRect const&, WebCore::IntRect const&, WebCore::CoordinatedTileBuffer&) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #6 0x00007f1b48dca3d0 in WebCore::SkiaBackingStore::update(WebCore::FloatSize const&, float, WebCore::CoordinatedBackingStoreProxy::Update&&) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #7 0x00007f1b46db8a78 in WebCore::CoordinatedPlatformLayer::flushCompositingStateOnSkiaTarget(WTF::OptionSet<WebCore::CompositionReason, (WTF::ConcurrencyTag)0> const&, WebCore::SkiaCompositingLayer&) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #8 0x00007f1b46db8187 in WebCore::CoordinatedPlatformLayer::flushCompositingState(WTF::OptionSet<WebCore::CompositionReason, (WTF::ConcurrencyTag)0> const&, bool) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #9 0x00007f1b45493471 in WebKit::ThreadedCompositor::flushCompositingState(WTF::OptionSet<WebCore::CompositionReason, (WTF::ConcurrencyTag)0> const&) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #10 0x00007f1b454926a6 in WebKit::ThreadedCompositor::renderLayerTree() () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #11 0x00007f1b4549887b in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)()) requires WTF::HasThreadSafeWeakPtrFunctions<WebKit::ThreadedCompositor>::value::{lambda()#1}, void>::call() () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #12 0x00007f1b46d0d63b in WTF::RunLoop::TimerBase::TimerBase(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral)::$_0::__invoke(void*) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #13 0x00007f1b46d0bcd6 in WTF::RunLoop::$_3::__invoke(_GSource*, int (*)(void*), void*) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #14 0x00007f1b43b2a45e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #15 0x00007f1b43b2a6d0 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #16 0x00007f1b46d0c301 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #17 0x00007f1b46d0c627 in WTF::RunLoop::run() () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #18 0x00007f1b46cace33 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #19 0x00007f1b46d123e6 in WTF::wtfThreadEntryPoint(void*) () at /home/claudio/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #20 0x00007f1b433cbaa4 in ??? () at /lib/x86_64-linux-gnu/libc.so.6 #21 0x00007f1b43458a64 in clone () at /lib/x86_64-linux-gnu/libc.so.6
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2026-05-15 22:45:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65032
EWS
Comment 2
2026-05-15 23:02:52 PDT
Committed
313351@main
(d226754fa1c0): <
https://commits.webkit.org/313351@main
> Reviewed commits have been landed. Closing PR #65032 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug