[WPE] Crash in WebCore::PlatformDisplay::skiaGrContext() with the old API when WEBKIT_USE_SKIA_FOR_COMPOSITION=1 https://bugs.webkit.org/show_bug.cgi?id=314892

Reviewed by Claudio Saavedra.

Skia compositor is not yet supported by WPE legacy API, for now we
should always disable it.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphicsGLib.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::updatePreferences):

Canonical link: https://commits.webkit.org/313351@main